# tapeos

./: Cargo.toml  average-log.txt  connect-log.txt  disassembler-test.txt  log.txt  null  parellel-test.txt  parellel-test2.txt  parellel-test3.txt  parellel-test4.txt  parellel-test5.txt  parellel-test6.txt  status-10.txt  t.txt  test.rs  test.txt
src/: config.rs  lib.rs  main.rs  resourcepool.rs
src/base/: errort.rs  intent.rs  message.rs  resource.rs  rule.rs  staticrule.rs
src/components/controlhub/: adaptor.rs  interpreter.rs  waiter.rs
src/components/linkhub/: adaptor.rs  seeker.rs  tape.inc  waiter.rs
src/components/linkhub/bluetooth/: resource.rs  seek.rs  wait.rs
src/components/linkhub/internet/: resource.rs  seek.rs  wait.rs
src/components/linkhub/seek/: bluetooth.rs  wifi.rs
src/components/linkhub/wifi/: seek.rs  wait.rs
src/core/comm/: messager.rs
src/core/inxt/: disassembler.rs  intent.rs  monitor.rs  preprocess.rs  router.rs  schedule.rs  verifier.rs
src/core/inxt/disassembler/: dis.rs
src/core/inxt/exec/: monitor.rs  schedule.rs  verifier.rs
src/core/inxt/filter/: judge.rs
src/core/inxt/router/: router.rs
src/tools/: idgen.rs  interpreter.rs  llmq.rs  record.rs  rserver.rs
