[package]
name = "tapeos"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
idgenerator = "2.0.0"
futures = "0.3.31"
tokio = { version = "1.39.0", features = ["full"] }
env_logger = "0.11.6"
lazy_static = "1.4.0"
serde = { version = "1.0.200", features = ["derive"] }
uuid = "1.5.0"
chrono = "0.4.39"
regex = "1.10.0"
async-openai = "0.26.0"